# routes/api.php
@@ -2,10 +2,28 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\Api\FlowerController;
+use App\Http\Controllers\API\FlowerController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
-})->middleware('auth:sanctum');
+})->middleware('auth:api');
 
-route::apiResource('flowers', FlowerController::class); 
+// Route::apiResource('flowers', FlowerController::class);
+
+Route::resource('flower', FlowerController::class,
+    [
+        'only'=>[
+            'index',
+            'show'
+        ]
+    ]
+        );
+
+Route::resource('flower', FlowerController::class,
+    [
+        'except'=>[
+            'index',
+            'show'
+        ]
+    ])->middleware(['auth:api']);
+        
